--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.schwert398.cerkemobileforandroid"
+        applicationId "com.meloviliju.cerkemobileforandroid"
         minSdkVersion 16
         targetSdkVersion 29
         versionCode 2
